# MPI-CommComp-Overlap

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
include/: compute.h  compute_cpu.h  compute_gpu.cuh  grid2d.h  nmpm.h
lib/: memcpy_trace.cpp
scripts/: smi.sh
src/: compute.c  compute_cpu.c  compute_gpu.cu  cuda_memcpy_trace.cpp  grid2d.c  nmpm.c
src/arithmetic-intensity/: cpu-compute-bound.c  cpu-memory-bound.c  gpu-compute-bound.cu  gpu-memory-bound.cu
src/main/: main.c
